Modifiation du client et Api

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignorer le répertoire node_modules et .env pour le api
 Api/node_modules
 Api/config/.env
+Api/images
 
 # Ignorer le répertoire node_modules et .gitignore pour le client
 client/node_modules
